package at.htl.entities;public enum ProductType {
}
